// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdentifierLine/> should render expected JSX 1`] = `
<span
  className="d-inline-flex flex-wrap"
>
  <span
    className="mr-2"
  >
    <i
      className="fab fa-github fa-fw text-muted mr-1"
    />
    <a
      href="https://git.com/foo/bar"
    >
      foo
      /
      bar
    </a>
  </span>
  <span
    className="mr-2"
  >
    <i
      className="fas fa-code-branch fa-fw text-muted mr-1"
    />
    <a
      href="https://git.com/foo/bar/commit/edd98b1508f303eabaa12464f1dbb8ec5aace9de"
    >
      edd98b1508
    </a>
  </span>
  <span
    className="mr-2"
  >
    <i
      className="fas fa-shipping-fast fa-fw text-muted mr-1"
    />
    #
    5
  </span>
</span>
`;

exports[`<IdentifierLine/> should render expected JSX 2`] = `
<span
  class="d-inline-flex flex-wrap"
>
  <span
    class="mr-2"
  >
    <i
      class="fab fa-github fa-fw text-muted mr-1"
    />
    <a
      href="https://git.com/foo/bar"
    >
      foo/bar
    </a>
  </span>
  <span
    class="mr-2"
  >
    <i
      class="fas fa-code-branch fa-fw text-muted mr-1"
    />
    <a
      href="https://git.com/foo/bar/commit/edd98b1508f303eabaa12464f1dbb8ec5aace9de"
    >
      edd98b1508
    </a>
  </span>
  <span
    class="mr-2"
  >
    <i
      class="fas fa-shipping-fast fa-fw text-muted mr-1"
    />
    #5
  </span>
</span>
`;
